fix(ui): improve card layout, fix text overflow, and resolve checkbox validation

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,11 +18,11 @@ input {
 
 /* Modern: only after interaction */
 @supports (selector(:user-invalid)) {
-  input:user-invalid,
+  input[type="text"]:user-invalid,
   textarea:user-invalid {
     border-color: red;
   }
-  input:user-valid,
+  input[type="text"]:user-valid,
   textarea:user-valid {
     border-color: green;
   }
@@ -30,11 +30,11 @@ input {
 
 /* Fallback: older browsers */
 @supports not (selector(user-invalid)) {
-  input:invalid,
+  input[type="text"]:invalid,
   textarea:invalid {
     border-color: red;
   }
-  input:valid,
+  input[type="text"]:valid,
   textarea:valid {
     border-color: green;
   }
@@ -108,6 +108,8 @@ main,
   width: 80%;
   height: 45px;
   border-radius: var(--border-radius);
+
+  /* border: 1px solid red; */
 }
 
 .li-project-edit {
@@ -128,7 +130,7 @@ main,
   padding-left: 0.3rem;
   padding-right: 0.3rem;
   border-radius: 4px;
-  height: 45px;
+  /* height: 45px; */
 }
 
 .btn-confirm-project-edit {
@@ -202,8 +204,8 @@ main,
     "create-project-span create-project-span create-project-span";
   grid-template-columns: 3fr 1fr 1fr;
   gap: 0.2rem;
-  height: 45px;
-  /* border: 2px solid red; */
+  /* height: 45px; */
+  border: 2px solid red;
 }
 
 .input-project-name {
@@ -256,7 +258,7 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
 }
 
 .container-add-project-btn,
@@ -315,14 +317,30 @@ main {
   padding: 1rem;
 }
 
+.card-todo,
+.card-todo-expanded,
+.card-todo-editing {
+  /* grid-template-columns: repeat(4, minmax(0, 1fr)); */
+  /* min-width: 0; */
+  width: 100%;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  grid-template-columns: 130px 1fr auto auto;
+}
+
 .todo-dueDate {
   grid-area: todo-dueDate;
+  white-space: nowrap;
+
+  /* border: 1px solid red; */
 }
 
 /* used in normal and edit mode */
 .todo-priority {
   grid-area: todo-priority;
   align-self: start;
+  justify-self: center;
+
+  /* border: 1px solid red; */
 }
 
 /* used in normal and edit mode */
@@ -341,7 +359,13 @@ main {
   position: relative;
   appearance: none;
   transition: all 1.3s;
+
+  /* border: 2px solid red; */
 }
+
+/* .todo-done:valid {
+  border-color: hsl(0, 0%, 41%);
+} */
 
 .todo-done:checked {
   border-color: hsl(207, 71%, 46%);
@@ -400,9 +424,18 @@ main {
 .todo-title {
   grid-area: todo-title;
   font-weight: bold;
+
+  min-width: 0;
+  overflow-wrap: break-word;
+  /* border: 1px solid red; */
 }
 
 .todo-description {
+  grid-area: todo-description;
+  min-width: 0;
+  overflow-wrap: break-word;
+  /* 
+  border: 1px solid red; */
 }
 
 .todo-btn-trash {
